// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - select renders correctly 1`] = `
<jest>
  <select
    class="form-select form-select-md"
    required=""
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="form-text"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly as a multiple choice select 1`] = `
<jest>
  <select
    class=" multi-select"
    multiple=""
    required=""
  >
    <optgroup
      label="Group 1"
    >
      <option
        value="1"
      >
        Option group 1
      </option>
      <option
        value="2"
      >
        Option group 2
      </option>
      <option
        value="3"
      >
        Option group 3
      </option>
    </optgroup>
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="form-text"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly when disabled 1`] = `
<jest>
  <select
    class="form-select form-select-md"
    disabled=""
    required=""
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="form-text"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly when invalid 1`] = `
<jest>
  <select
    class="form-select form-select-md is-invalid"
    required=""
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="form-text"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly when multiple 1`] = `
<jest>
  <select
    class="form-select form-select-md"
    multiple=""
    required=""
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="form-text"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly when readonly 1`] = `
<jest>
  <select
    class="form-select form-select-md"
    required=""
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="form-text"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly when required 1`] = `
<jest>
  <select
    class="form-select form-select-md"
    required=""
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="form-text"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly with a label 1`] = `
<jest>
  <label
    class="form-label"
  >
    A select label
  </label>
  <select
    class="form-select form-select-md"
    required=""
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="form-text"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly with an hidden label 1`] = `
<jest>
  <label
    class="form-label visually-hidden"
  >
    A select label
  </label>
  <select
    class="form-select form-select-md"
    required=""
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="form-text"
  >
    Helper text for the select element
  </div>
</jest>
`;
